--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 VIGNESH M</p>
+        <p>&copy; 2023 RAJESH</p>
     </footer>
 
     <script>
