--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Event Management system</a></li>
+                <li><a href="events.html">Event Management system</a></li>
                 <li><a href="#">Online Voting System</a></li>
                 <li><a href="#">Crop and Weed Classification System</a></li> 
                 <!-- Add more project links here -->
