--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #e7b71a;
+            background-color: #80e9db;
         }
 
         header {
