--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li>Data Mining</li>
                 <li>Cloud Computing</li>
                 <li>Python</li>
-                <li>IBM cloud</li>
+                <li>Data Structures</li>
                 <li>ML & AI</li>
                 <li>java</li>
                 <li>c++</li>
