--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <h2>Projects</h2>
             <ul>
                 <li><a href="events.html">Event Management system</a></li>
-                <li><a href="#">Online Voting System</a></li>
+                <li><a href="voting.html">Online Voting System</a></li>
                 <li><a href="#">Crop and Weed Classification System</a></li> 
                 <!-- Add more project links here -->
             </ul>
