--- a/voting.html
+++ b/voting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Voting System</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,17 +13,17 @@
         </header>
         <div class="voting-options">
             <div class="option">
-                <img src="candidate1.jpg" alt="Candidate 1">
+                <img src="vote1.jpg" alt="Candidate 1">
                 <h3>John Doe</h3>
                 <button class="vote-btn" id="vote1">Vote</button>
             </div>
             <div class="option">
-                <img src="candidate2.jpg" alt="Candidate 2">
+                <img src="vote2.jpg" alt="Candidate 2">
                 <h3>Jane Smith</h3>
                 <button class="vote-btn" id="vote2">Vote</button>
             </div>
             <div class="option">
-                <img src="candidate3.jpg" alt="Candidate 3">
+                <img src="vote3.jpg" alt="Candidate 3">
                 <h3>Robert Brown</h3>
                 <button class="vote-btn" id="vote3">Vote</button>
             </div>
