--- a/voting.html
+++ b/voting.html
@@ -23,7 +23,7 @@
                 <button class="vote-btn" id="vote2">Vote</button>
             </div>
             <div class="option">
-                <img src="vote3.jpg" alt="Candidate 3">
+                <img src="vote3.png" alt="Candidate 3">
                 <h3>Robert Brown</h3>
                 <button class="vote-btn" id="vote3">Vote</button>
             </div>
